Se crea ahora la Pagina HTML y la conexión entre las páginas HTML y CSS

--- a/HTML.html
+++ b/HTML.html
@@ -13,17 +13,17 @@
         <nav>
             <ul>
                 <li><a href="#">INICIO</a></li>
-                <li><a href="HTML.html">HTML</a></li>
-                <li><a href="#">CSS</a></li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="Css.html">CSS</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="content">
-        <div class="card">
-            <h3>CSS</h3>
-            <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
-            <img src="W3.svg" alt="Logo CSS">
+    <section class="html_box">
+        <div class="caja">
+            <h3>HTML</h3>
+            <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+            <img src="html_img.png" alt="Logo HTML">
         </div>
     </section>
 
