Creacion del archivo principal, con una disposicion en cajas

--- a/Css.html
+++ b/Css.html
@@ -12,7 +12,7 @@
         <h2>HTML + CSS</h2>
         <nav>
             <ul>
-                <li><a href="#">INICIO</a></li>
+                <li><a href="Principal.html">INICIO</a></li>
                 <li><a href="HTML.html">HTML</a></li>
                 <li><a href="#">CSS</a></li>
             </ul>
