--- a/HTML.html
+++ b/HTML.html
@@ -6,7 +6,7 @@
     <title>Desarrollo de Aplicaciones Web</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="fondo-comun">
     <header>
         <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
         <h2>HTML + CSS</h2>
